# sirno

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  EVERYTHING.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  METHODOLOGY.md  README.md  Sirno.lock.toml  Sirno.toml  flake.nix
.sirno/: anchor.toml  meta.toml  tide.toml
.sirno/lake/: actualization-discipline.md  actualize.md  agent-skills.md  anchor-commands.md  (+127 more)
core/: .gitignore  Sirno.toml
docs/: concept.md  meta.md  narrative.md
sirno-docs/: actualize.md  agent-skills-zh.md  agent-skills.md  belongs.md  bootstrap-resolution.md  category.md  cli-interface.md  clustee.md  code-form.md  code-surface.md  concept-driven-development-zh.md  concept-driven-development.md  concept.md  config-writing-discipline.md  crystallization.md  design-doc-writer-skill.md  design-source-authority-zh.md  design-source-authority.md  development-style-zh.md  development-style.md  direction.md  documentation-driven-development.md  entry-address.md  entry-artifact.md  entry-atom.md  entry-commands.md  entry-domain.md  entry-freeze.md  entry-lifecycle.md  entry-path.md  entry-zh.md  entry.md  form-zh.md  form.md  frost-versioning.md  frostline.md  future-work-zh.md  future-work.md  generated-footer-ownership-zh.md  generated-footer-ownership.md  (+113 more)
sirno-docs-zh/: bootstrap-resolution-zh.md  concept-zh.md  entry-zh.md  frost-versioning-zh.md  interfaces-zh.md  introduction-zh.md  raise-zh.md  readme-zh.md  refines-zh.md  sirno-zh.md  structural-check-zh.md  test-driven-development-zh.md  transform-zh.md
sirno-frost/: Eter.lock.toml
sirno-lake/: actualization-discipline.md  agent-skills.md  anchor-file.md  anchor.md  belongs.md  bootstrap-resolution.md  category.md  charm-and-spell-commands.md  charm-enablement.md  charm-manifest.md  charm-resolution.md  charm.md  cli-interface.md  concept-driven-development.md  concept.md  crystallization.md  deprecated.md  desc.md  design-doc-writer-skill.md  documentation-driven-development.md  entry-address-resolution.md  entry-address.md  entry-artifact.md  entry-atom.md  entry-commands.md  entry-domain.md  entry-freeze.md  entry-lifecycle.md  entry.md  extension-system.md  form.md  frost-implementation.md  frostline.md  future-work.md  generated-footer-ownership.md  generated-footer.md  generated-navigation.md  glacier.md  implemented.md  infer-resolution.md  (+73 more)
sirno-lake-zh/: belongs-zh.md  bootstrap-resolution-zh.md  category-zh.md  entry-freeze-zh.md  generated-navigation-zh.md  introduction-zh.md  methodology-zh.md  perspective-and-terms-zh.md  project-self-application-zh.md  readme-zh.md  reflect-zh.md  repo-zh.md  ripple-zh.md  sirno-frost-zh.md  sirno-zh.md  storage-zh.md  transform-cycle-zh.md  witness-fixture-isolation-zh.md
src/: anchor.rs  artifact.rs  charm.rs  check.rs  config.rs  core.rs  entry.rs  files.rs  freeze.rs  frost.rs  id.rs  identifier.rs  lake.rs  lib.rs  links.rs  lock.rs  main.rs  mcp.rs  meta.rs  mist.rs  query.rs  render.rs  store.rs  structural.rs  tide.rs  upstream.rs  witness.rs
(+407 files in other folders)
