[package]
name = "sirno"
version = "0.0.1"
edition = "2024"
description = "Sirno gives project design a semantic intermediate representation."
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
glob = "0.3"
indexmap = { version = "2.14.0", features = ["serde"] }
regex = "1.12"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
smol_str = { version = "0.3.6", features = ["serde"] }
thiserror = "2"
toml = { version = "1.1.2", features = ["preserve_order"] }
tracing = "0.1"
eter = "0"
mosaika = "0"

[dev-dependencies]
tempfile = "3"
