[package]
name = "sirno"
version = "0.0.5"
edition = "2024"
description = "Sirno gives project design a semantic intermediate representation."
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/sirno"
readme = "README.md"
repository = "https://github.com/LighghtEeloo/sirno"

[dependencies]
anstream = "1.0.0"
anstyle = "1.0.14"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
comfy-table = { version = "7.2.2", default-features = false, features = ["tty"] }
glob = "0.3"
indexmap = { version = "2.14.0", features = ["serde"] }
ratatui = "0.30.0"
regex = "1.12"
rmcp = { version = "1.7.0", features = ["server", "transport-io"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
smol_str = { version = "0.3.6", features = ["serde"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = { version = "1.1.2", features = ["preserve_order"] }
tracing = "0.1"
unicode-width = "0.2"
eter = "0"
mosaika = "0"

[target.'cfg(target_os = "linux")'.dependencies]
rustix = { version = "1.1.4", features = ["fs"] }

[target.'cfg(any(target_os = "macos", target_os = "freebsd", target_os = "netbsd", target_os = "openbsd"))'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Security_Authorization",
  "Win32_Storage_FileSystem",
] }

[dev-dependencies]
rmcp = { version = "1.7.0", features = ["client"] }
tempfile = "3"
